--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,17 @@
+blinker==1.7.0
+certifi==2023.7.22
+charset-normalizer==3.3.2
 click==8.1.7
-Flask==2.2.2
-Flask-Login==0.6.2
-Flask-SQLAlchemy==3.0.2
-greenlet==2.0.1
-itsdangerous==2.0.1
+Flask==3.0.0
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+idna==3.4
+itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.1
-pip==23.3
-python-dotenv==0.21.0
-setuptools==68.0.0
-SQLAlchemy==2.0.21
-typing_extensions==4.7.1
-Werkzeug==2.2.3
-wheel==0.41.2
+MarkupSafe==2.1.3
+python-dotenv==1.0.0
+requests==2.31.0
+SQLAlchemy==2.0.23
+typing_extensions==4.8.0
+urllib3==2.1.0
+Werkzeug==3.0.1
