--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 Authlib==1.2.1
+black==23.11.0
 blinker==1.7.0
 certifi==2023.7.22
 cffi==1.16.0
@@ -8,14 +9,20 @@ cryptography==41.0.5
 Flask==3.0.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+greenlet==3.0.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.11.2
+platformdirs==4.0.0
 pycparser==2.21
 python-dotenv==1.0.0
 requests==2.31.0
 SQLAlchemy==2.0.23
+tomli==2.0.1
 typing_extensions==4.8.0
 urllib3==2.1.0
 Werkzeug==3.0.1
