--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 cryptography==41.0.5
 Flask==3.0.0
+Flask-Cors==4.0.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.1
