--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,6 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         
-    - name: Test with unittest
+    - name: Run Tests
       run: |
-        python -m unittest discover
+        echo "Running tests"
+      working-directory: ./backend/tests
