--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,12 +20,15 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: Install dependencies
+    - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        
+        pip install -r requirements.txt
+      working-directory: 'backend'
+
+      
     - name: Run Tests
       run: |
+        python -m unittest discover
         echo "Running tests"
-      working-directory: ./backend/tests
+      working-directory: 'backend/tests'
