--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   eslint:
     name: Run ESLint
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - name: Check out source code
@@ -26,7 +26,7 @@ jobs:
 
   flake8:
     name: Run Flake8
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - name: Check out source code
