--- a/frontend/config/nginx.conf
+++ b/frontend/config/nginx.conf
@@ -1,8 +1,17 @@
 server {
     listen 80;
+    server_name courseswap.live www.courseswap.live;
 
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
+    }
+
+     location / {
+        proxy_pass http://frontend:80;  # Assuming frontend service serves on port 80
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
