--- a/frontend/config/nginx.conf
+++ b/frontend/config/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name courseswap.live www.courseswap.live
+    server_name courseswap.live www.courseswap.live;
 
     location / {
         root /usr/share/nginx/html;
