--- a/frontend/config/nginx.conf
+++ b/frontend/config/nginx.conf
@@ -7,3 +7,11 @@ server {
         try_files $uri $uri/ /index.html;
     }
 }
+
+server {
+    listen 443 ssl;
+    server_name courseswap.live www.courseswap.live;
+
+    ssl_certificate /etc/nginx/ssl/courseswap.live.chained.crt;
+    ssl_certificate_key /etc/nginx/ssl/courseswap.live.key;
+}
