--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     depends_on:
       - db
     ports:
-      - "8000:8000"
+      - "${BACKEND_PORT:-8000}:8000"
     networks:
       - webnet
     deploy:
@@ -32,29 +32,29 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "80:80"
-      - "443:443"
+      - "${FRONTEND_HTTP_PORT:-80}:80"
+      - "${FRONTEND_HTTPS_PORT:-443}:443"
     environment:
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
     volumes:
       - ./frontend/config:/etc/nginx/conf.d
-      - ./courseswap.live.chained.crt:/etc/nginx/ssl/courseswap.live.chained.crt
-      - ./courseswap.live.key:/etc/nginx/ssl/courseswap.live.key
-      - ./init-config.sh:/init-config.sh  # Add the init-config script
-    entrypoint: ["/init-config.sh"]  # Override the default entrypoint
+      - ${SSL_CERT_PATH}:/etc/nginx/ssl/courseswap.live.chained.crt
+      - ${SSL_KEY_PATH}:/etc/nginx/ssl/courseswap.live.key
+      - ./init-config.sh:/init-config.sh
+    entrypoint: ["/init-config.sh"]
     networks:
       - webnet
 
   db:
     image: postgres:alpine
     environment:
-      POSTGRES_DB: courseswapdb
-      POSTGRES_USER: username
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: ${POSTGRES_DB:-courseswapdb}
+      POSTGRES_USER: ${POSTGRES_USER:-username}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ${POSTGRES_DATA_PATH:-./postgres_data}:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "${DB_PORT:-5432}:5432"
     networks:
       - webnet
     deploy:
@@ -66,7 +66,7 @@ services:
     depends_on:
       - db
     ports:
-      - "8081:8080"
+      - "${ADMINER_PORT:-8081}:8080"
     networks:
       - webnet
 
